--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-01-16 17:09-0300\n"
-"PO-Revision-Date: 2023-02-27 14:40+0200\n"
+"PO-Revision-Date: 2023-03-06 13:11+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -13893,7 +13893,7 @@ msgstr "Viivakoodi: %s "
 #: koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt:491
 #, c-format
 msgid "Barcodes "
-msgstr "Viivakoodeista"
+msgstr "Viivakoodit "
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/itemsearch.tt:265
 #: koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/itemsearch.tt:282
