Räätälöidyt haun rajaukset -> Hakurajaukset

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-01-16 17:09-0300\n"
-"PO-Revision-Date: 2023-03-06 13:11+0200\n"
+"PO-Revision-Date: 2023-03-17 12:25+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -22492,7 +22492,7 @@ msgstr "Räätälöidyt hakukentät"
 #: koha-tmpl/intranet-tmpl/prog/en/includes/facets.inc:12
 #, c-format
 msgid "Custom search filters"
-msgstr "Räätälöidyt haun rajaukset"
+msgstr "Hakurajaukset"
 
 #. SCRIPT
 #: koha-tmpl/intranet-tmpl/prog/en/includes/str/tinymce_i18n.inc:2
