--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-01-16 17:09-0300\n"
-"PO-Revision-Date: 2023-03-17 12:25+0200\n"
+"PO-Revision-Date: 2023-03-23 14:27+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -20393,7 +20393,7 @@ msgstr "Vertaa valittuja"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-detail.tt:486
 #, c-format
 msgid "Complete"
-msgstr "Täydellinen"
+msgstr "Vastaanotettu"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/circ/article-requests.tt:42
 #, c-format
