Liitännäisten suomennoksiin korjauksia
Ylläpito -> Liitännäiset -> Liitännäistyyppien alasvetovalikko

Tarkastele MARC-konversioliitännäisiä -> Näytä MARC-konversioliitännäiset
Katso virkailijaliittymän kuvailuliitännäiset -> Näytä kuvailutietueita rikastavat liitännäiset
Tarkastele kaukolainojen saatavuuden liitännäisiä -> Näytä kaukolainojen saatavuusliitännäiset
Tarkastele kaikkia liitännäisiä -> Näytä kaikki liitännäiset

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-01-16 17:09-0300\n"
-"PO-Revision-Date: 2023-04-03 15:36+0300\n"
+"PO-Revision-Date: 2023-04-11 13:51+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -66912,7 +66912,7 @@ msgstr "Näytä "
 #: koha-tmpl/intranet-tmpl/prog/en/modules/plugins/plugins-home.tt:54
 #, c-format
 msgid "View ILL availability plugins"
-msgstr "Tarkastele kaukolainojen saatavuuden liitännäisiä"
+msgstr "Näytä kaukolainojen saatavuusliitännäiset"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/ill/ill-requests.tt:786
 #, c-format
@@ -66928,7 +66928,7 @@ msgstr "Näytä MARC"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/plugins/plugins-home.tt:51
 #, c-format
 msgid "View MARC conversion plugins"
-msgstr "Tarkastele MARC-konversioliitännäisiä"
+msgstr "Näytä MARC-konversioliitännäiset"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/reports/itemtypes.tt:80
 #, c-format
@@ -66959,7 +66959,7 @@ msgstr "Näytä kaikki kirjastot"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/plugins/plugins-home.tt:48
 #, c-format
 msgid "View all plugins"
-msgstr "Tarkastele kaikkia liitännäisiä"
+msgstr "Näytä kaikki liitännäiset"
 
 #. I
 #: koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tt:112
@@ -67133,7 +67133,7 @@ msgstr "Näytä selkätarra"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/plugins/plugins-home.tt:53
 #, c-format
 msgid "View staff catalog biblio enhancement plugins"
-msgstr "Katso virkailijaliittymän kuvailuliitännäiset"
+msgstr "Näytä kuvailutietueita rikastavat liitännäiset"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/admin/marctagstructure.tt:305
 #, c-format
