--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-05-09 15:58+0300\n"
-"PO-Revision-Date: 2023-05-10 09:20+0300\n"
+"PO-Revision-Date: 2023-05-12 15:07+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -27637,7 +27637,7 @@ msgstr "Syötä kirjastokortin numero tai osa nimestä"
 #: koha-tmpl/intranet-tmpl/prog/en/includes/patron-search.inc:11
 #, c-format
 msgid "Enter patron card number or partial name:"
-msgstr "Syötä kirjastokortin numero tai osa nimestä:"
+msgstr "Syötä kirjastokortin numero tai asiakkaan koko nimi:"
 
 #. SCRIPT
 #: koha-tmpl/intranet-tmpl/prog/en/modules/circ/offline.tt:242
