--- a/po/fi-FI-pref.po
+++ b/po/fi-FI-pref.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2015-04-15 09:41-0300\n"
-"PO-Revision-Date: 2023-05-10 10:00+0300\n"
+"PO-Revision-Date: 2023-05-24 13:47+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.3.1\n"
 "X-Pootle-Path: /fi/22.11/fi-FI-pref.po\n"
 "X-Pootle-Revision: 1\n"
 "X-POOTLE-MTIME: 1675413223.464631\n"
@@ -5932,7 +5932,7 @@ msgid ""
 "circulation.pref#NoIssuesChargeGuarantees# Prevent a patron from checking "
 "out if the patron has guarantees owing in total more than"
 msgstr ""
-"Estä asiakasta lainaamasta, jos hänen takaajalla on maksuja enemmän kuin"
+"Estä asiakasta lainaamasta, jos hänen taattavillaan on maksuja enemmän kuin"
 
 # Circulation > Checkout policy
 msgid ""
